# platformer-sdl3

./: CMakeLists.txt  LICENSE  README.md
lib/: _vars.h
maps/: map1.txt  map2.txt
src/: main.c
